--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,6 @@ version: '3.9'
 
 services:
   web:
-    image: *node-app-test-new:latest*
+    image: *amrendra0918/node-app-test-new*
     ports:
       - "8000:8000"
